# MediaWorkbench

./: .gitignore  README.md
backend/: .env.example  app.py  apply_migration.py  conf.py  init_db.py  pyproject.toml  requirements.txt  run_migration.py  update_db.py  update_db_simple.py
backend/app/: __init__.py
backend/app/api/: advertisement_task.py  buyer_task.py  crawler.py  download_images.py  filesystem.py  image.py  image_locations.py  note.py  posts.py  prompt.py  static.py  system_config.py  user.py
backend/app/models/: __init__.py  advertisement_task.py  buyer_task.py  image.py  note.py  system_config.py  task_rule_card.py  user.py  workflow.py
backend/app/utils/: logger.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: add_image_source_fields.py  add_image_type_column.py
backend/test/debug/: test_local_image_storage.py
backend/utils/: task_classifier.py
backend/xhs_upload/: auto_upload.py
docs/backend/: LAN_ACCESS_GUIDE.md
docs/frontend/: TROUBLESHOOT_PHONE_ACCESS.md
frontend/: auto-imports.d.ts  components.d.ts  index.html  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: axios.ts  config.ts  functions.ts  index.ts
test/backend/: check_db.py  check_image_paths.py  check_routes.py  create_tables.py  test-image-api.py  test_api_response.py  test_debug.py  test_enum.py  test_enum_mapping.py  test_enum_replicate.py  test_fix.py  test_image_path.py  test_list_images.py
test/frontend/: test-api.js  test-direct.js  test-endpoint.js
(+23 files in other folders)
